# sdp-player

./: .gitignore  Cargo.toml  api.rest  stream.sdp
.github/workflows/: release.yml
presets/: presets.yml
sdplay/: Cargo.toml
sdplay-lib/: Cargo.toml
sdplay-lib/src/: audio.rs  error.rs  lib.rs  sdp.rs  stream.rs
sdplay-serve/: Cargo.toml  api.rest
sdplay-serve/src/: main.rs  poem.rs
sdplay/src/: main.rs  preset.rs
src/: audio.rs  error.rs  lib.rs  main.rs  preset.rs  sdp.rs  stream.rs
