[package]
name = "sdp-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = "4.3.19"
cpal = "0.15.2"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
rand = "0.8.5"
regex = "1.9.1"
reqwest = "0.11.18"
rtp-rs = "0.6.0"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = [
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "macros",
] }
