[package]
name = "sdplay-lib"
version = "0.3.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fs = ["tokio/fs"]
net = ["reqwest", "url"]

[dependencies]
cpal = "0.15.2"
http = "0.2.9"
log = "0.4.19"
poem = "1.3.57"
poem-openapi = "3.0.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", optional = true }
rtp-rs = "0.6.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.25"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["macros"], default-features = false }
url = { version = "2.4.0", features = ["serde"], optional = true }
