[package]
name = "sdplay-serve"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdplay-lib = { version = "*", features = ["net"] }
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["cargo", "derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
http = "0.2.9"
log = "0.4.19"
poem = "1.3.57"
poem-openapi = { version = "3.0.0", features = ["swagger-ui", "url"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = [
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "macros",
] }
url = { version = "2.4.0", features = ["serde"] }
