[package]
name = "sdplay"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdplay-lib = { version = "*", features = ["fs", "net"] }
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["cargo", "derive", "env"] }
directories = "5.0.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
tokio = { version = "1.29.1", features = [
    "rt",
    "rt-multi-thread",
    "signal",
    "macros",
    "fs",
] }
url = "2.4.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.25"
